--- a/Crawling/build.gradle
+++ b/Crawling/build.gradle
@@ -30,6 +30,13 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.seleniumhq.selenium:selenium-java:4.21.0' // 동적 크롤링
+	implementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.21.0'
+	implementation 'org.springframework.boot:spring-boot-starter-json'
+	implementation 'org.springframework.boot:spring-boot-starter-scheduling'
+
+	implementation 'com.slack.api:slack-api-client:1.43.1' //slack
 }
 
 tasks.named('test') {
